# GPUMagic

./: .gitignore  CUDAExamples.sln  GaussianElimination.sln  README.md
CUDAExamples/: CUDAExamples.vcxproj  main.cu
GaussianElimination/: main.cu
Matrix Transpose/: Matrix Transpose.vcxproj  main.cu
MatrixMult/: MatrixMult.vcxproj  main.cu
MatrixTranspose/: main.cu
Unix/: CMakeLists.txt  Makefile  TODO.txt
Unix/Include/: GPUMagic.h  GPUMagic_internal.cuh  common.cuh  common.h  matrix.cuh  matrix.h  timer.cuh
Unix/Kernels/: cumsum.cu  cumsum_span_efficient.cu  matmul_dense.cu  matmul_rowscale.cu
Unix/Tests/: cumsum.cpp  matmul.cpp  matmul_sparse.cpp
Unix/Utils/: matrix.cu  timer.cu
Windows/: CUDAExamples.sln
Windows/GaussianElimination/: main.cu
Windows/MatrixMult/: main.cu
Windows/MatrixTranspose/: MatrixTranspose.vcxproj  main.cu
